--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 
   <header role="banner" class="masthead">
     <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
-      <h1 class="push-0">Shrubbery, etc.</h1>
+      <h1 class="push-0 bold">Shrubbery, etc.</h1>
     </div>
     <div class="nav">
       <nav role="navigation" id="nav" class="wrapper gutter-1-2">
         <ol class="mega list-group-inline push-0">
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#about">About</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#shrubs">Shrubs</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#prices">Prices</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#news">News</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#contact">Contact</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 bold" href="#about">About</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 bold" href="#shrubs">Shrubs</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 bold" href="#prices">Prices</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 bold" href="#news">News</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 bold" href="#contact">Contact</a></li>
         </ol>
       </nav>
     </div>
@@ -41,37 +41,37 @@
       </div>
       <div class="about-content pad-t-2 pad-b-2">
         <div class="wrapper gutter-1-2">
-          <h2 class="push-0">About</h2>
-          <p class="mega push-0">Is there anywhere in this town where we could buy a shrubbery!?</p>
-          <p class="mega push-0 max-length not-centered">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
+          <h2 class="push-0 bold">About</h2>
+          <p class="mega push-0 bold">Is there anywhere in this town where we could buy a shrubbery!?</p>
+          <p class="mega push-0 max-length not-centered bold">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
         </div>
       </div>
     </section>
 
     <section id="shrubs">
       <div class="wrapper gutter-1-2">
-        <h2 class="push-0 color-brand-dark">Products</h2>
+        <h2 class="push-0 color-brand-dark bold">Products</h2>
         <p class="mega max-length not-centered">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub-1.jpg" alt="" aria-details="grassy-shrubs">
             <div class="gutter-1-4" id="grassy-shrubs">
-              <h3 class="mega push-0">Grassy shrubs</h3>
-              <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
+              <h3 class="mega push-0 bold">Grassy shrubs</h3>
+              <p>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</p>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub-2.jpg" alt="" aria-details="shrubs-with-laurels">
             <div class="gutter-1-4" id="shrubs-with-laurels">
-              <h3 class="mega push-0">Shrubs with laurels</h3>
-              <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
+              <h3 class="mega push-0 bold">Shrubs with laurels</h3>
+              <p>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</p>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub-3.jpg" alt="" aria-details="two-level-shrub">
             <div class="gutter-1-4" id="two-level-shrub">
-              <h3 class="mega push-0">Two-level shrubbery</h3>
-              <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
+              <h3 class="mega push-0 bold">Two-level shrubbery</h3>
+              <p>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</p>
             </div>
           </li>
         </ul>
@@ -81,9 +81,10 @@
     <section class="prices pad-t pad-b" id="prices">
       <div class="wrapper gutter-1-2">
         <h2 class="push-0 color-brand-dark">Prices</h2>
+        <p class="mega max-length not-centered not-italic push">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</p>
         <table>
           <caption>
-            <p class="mega max-length not-centered not-italic push-0">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</p>
+            <p class="push-0">Prices for small, medium, and large shrubberies.</p>
           </caption>
           <thead>
             <tr>
