--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
   </header>
 
-  <main role="main" id="main">
+  <main role="main" id="main" tabindex="0">
     <section class="about push" id="about">
       <div class="embed embed-24by10">
         <img class="embed-item" src="images/shrubs.jpg" alt="" aria-details="group-of-shrubs">
@@ -126,15 +126,15 @@
         <ol class="list-group">
           <li class="push">
             <h3 class="push-0"><a href="#">What makes a good shrubbery?</a></h3>
-            <p class="push-0">A quick checklist for determining if a shrub is worthy of knighthood. <a href="#" aria-label="Read more about good shrubbery">Read&nbsp;more…</a></p>
+            <p class="push-0">A quick checklist for determining if a shrub is worthy of knighthood. <a href="#" class="color-brand-dark" aria-label="Read more about good shrubbery">Read&nbsp;more…</a></p>
           </li>
           <li class="push">
             <h3 class="push-0"><a href="#">Shrubbery recycling</a></h3>
-            <p class="push-0">I will come pick up your shrub and recycle it. Though why you’d want to get rid of a shrubbery I do not know. <a href="#" aria-label="Read more about recycling shrubbery">Read&nbsp;more…</a></p>
+            <p class="push-0">I will come pick up your shrub and recycle it. Though why you’d want to get rid of a shrubbery I do not know. <a href="#" class="color-brand-dark" aria-label="Read more about recycling shrubbery">Read&nbsp;more…</a></p>
           </li>
           <li class="push">
             <h3 class="push-0"><a href="#">Greens of any kind!</a></h3>
-            <p class="push-0">I now sell and plant more than just shrubs! Greens of any kind: lettuce, kale, onions, grasses, trees, etc. <a href="#" aria-label="Read more about different greens">Read&nbsp;more…</a></p>
+            <p class="push-0">I now sell and plant more than just shrubs! Greens of any kind: lettuce, kale, onions, grasses, trees, etc. <a href="#" class="color-brand-dark" aria-label="Read more about different greens">Read&nbsp;more…</a></p>
           </li>
         </ol>
       </div>
